Small changes to many files

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -15,7 +15,7 @@
     "## List of examples\n",
     "### Corpora\n",
     " * [Corpus search](#corpus-search)\n",
-    " * [Frequency of *puur*+verb and *zuiver*+verb compared](#freq-puur-zuiver)\n",
+    " * [Frequency of *zeker*+verb and *vast*+verb compared](#freq-puur-zuiver)\n",
     " * [Train a POS tagger on an annotated corpus](#pos-tagger)\n",
     " * [Search in corpus and filter on metadata](#corpus-filter-metadata)\n",
     " * [Visualizing h-dropping](#visualizing-h-dropping)\n",
@@ -70,8 +70,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-05T13:40:16.873610Z",
-     "start_time": "2019-03-05T13:40:16.625719Z"
+     "end_time": "2019-03-06T11:40:37.385545Z",
+     "start_time": "2019-03-06T11:40:37.116038Z"
     }
    },
    "outputs": [],
@@ -94,8 +94,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-05T13:40:51.293852Z",
-     "start_time": "2019-03-05T13:40:17.982996Z"
+     "end_time": "2019-03-06T11:40:41.046690Z",
+     "start_time": "2019-03-06T11:40:40.502187Z"
     },
     "scrolled": false
    },
@@ -115,12 +115,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### Frequency of *puur*+verb and *zuiver*+verb compared <a class=\"anchor\" id=\"freq-puur-zuiver\"></a>\n",
-    "* Below cell searches for *puur*+verb and for *zuiver*+verb in the CHN corpus\n",
+    "### Frequency of *zeker*+verb and *vast*+verb compared <a class=\"anchor\" id=\"freq-puur-zuiver\"></a>\n",
+    "* Below cell searches for *zeker*+verb and for *vast*+verb in the Letters as Loot (zeebrieven) corpus\n",
     "* Compare frequencies"
    ]
   },
@@ -129,10 +127,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T15:21:53.003186Z",
-     "start_time": "2019-02-26T15:21:46.281694Z"
-    },
-    "hidden": true
+     "end_time": "2019-03-06T11:43:41.501438Z",
+     "start_time": "2019-03-06T11:43:40.889362Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,15 +139,17 @@
     "from chaininglib.ui.dfui import display_df\n",
     "from chaininglib.utils.dfops import column_difference\n",
     "\n",
+    "corpus_name = \"zeebrieven\"\n",
+    "\n",
     "# Word 1: puur\n",
-    "word1= \"puur\"\n",
-    "cq1 = create_corpus(\"chn\").pattern(r'[word=\"' + word1 + r'\"][pos=\"VRB.*\"]')\n",
+    "word1= \"zeker\"\n",
+    "cq1 = create_corpus(corpus_name).pattern(r'[lemma=\"' + word1 + r'\"][pos=\"VRB.*\"]')\n",
     "df_corpus1 = cq1.search().kwic()\n",
     "display_df(df_corpus1, word1)\n",
     "\n",
     "# Word 2: zuiver\n",
-    "word2 = \"zuiver\"\n",
-    "cq2 = create_corpus(\"chn\").pattern(r'[word=\"' + word2 + r'\"][pos=\"VRB.*\"]')\n",
+    "word2 = \"vast\"\n",
+    "cq2 = create_corpus(corpus_name).pattern(r'[lemma=\"' + word2 + r'\"][pos=\"VRB.*\"]')\n",
     "df_corpus2 = cq2.search().kwic()\n",
     "display_df(df_corpus2, word2)\n",
     "\n",
@@ -166,11 +165,66 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Train a POS tagger on an annotated corpus <a class=\"anchor\" id=\"pos-tagger\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-04T11:56:40.202503Z",
+     "start_time": "2019-03-04T11:56:39.897412Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from chaininglib.ui.dfui import display_df\n",
+    "from chaininglib.process.corpus import get_tagger\n",
+    "from chaininglib.search.CorpusQuery import *\n",
+    "from chaininglib.search.LexiconQuery import *\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# TODO: replace by historical lexicon\n",
+    "base_lexicon=\"molex\"\n",
+    "\n",
+    "# we have a given word, let's say: \"loop\"\n",
+    "some_word = \"loop\"\n",
+    "\n",
+    "# get the paradigm of the lemma our word is a part of\n",
+    "l = create_lexicon(base_lexicon).lemma(some_word).search()\n",
+    "df_paradigm = l.kwic()\n",
+    "display_df(df_paradigm)\n",
+    "\n",
+    "# gather some pattern including our word, out of annotated corpora\n",
+    "# here: DET + ADJ + 'loop'\n",
+    "\n",
+    "dfs_all_corpora = []\n",
+    "\n",
+    "for one_corpus in get_available_corpora():\n",
+    "    print('querying '+one_corpus+'...')\n",
+    "    c = create_corpus(one_corpus).word(some_word).detailed_context(True).search()\n",
+    "    df_corpus = c.kwic() \n",
+    "    \n",
+    "    # store the results\n",
+    "    dfs_all_corpora.append(df_corpus)\n",
+    "\n",
+    "# get a tagger trained with our corpus data\n",
+    "tagger = get_tagger(dfs_all_corpora)\n",
+    "\n",
+    "# Use the trained tagger to tag unknown sentences\n",
+    "# The input must be like: tagger.tag(['today','is','a','beautiful','day'])\n",
+    "\n",
+    "sentence = 'Mijn buurman kijkt door de loop van zijn geweer'\n",
+    "tagged_sentence = tagger.tag( sentence.split() )\n",
+    "\n",
+    "print(tagged_sentence)\n",
+    "\n",
+    "\n",
+    "# Know we can lemmatize each occurence of our lemma in the new sentences"
    ]
   },
   {
@@ -233,85 +287,30 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:59:31.513866Z",
-     "start_time": "2019-02-26T13:58:13.253260Z"
+     "end_time": "2019-03-06T14:05:04.492326Z",
+     "start_time": "2019-03-06T14:04:52.313845Z"
     }
    },
    "outputs": [],
    "source": [
+    "\n",
     "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.metadata import get_available_metadata\n",
     "from chaininglib.ui.dfui import display_df\n",
-    "\n",
-    "corpus_to_search=\"chn\"\n",
-    "\n",
+    " \n",
+    "corpus_to_search=\"zeebrieven\"\n",
+    "group_by_column = 'afz_geb_plaats'\n",
+    " \n",
     "fields = get_available_metadata(corpus_to_search)\n",
-    "\n",
-    "\n",
+    " \n",
     "df_corpus1 = create_corpus(corpus_to_search).pattern(r'[lemma=\"h[aeo].*\" & word=\"[aeo].*\"]').extra_fields_doc(fields[\"document\"]).search().kwic()\n",
-    "df_corpus1 = create_corpus(corpus_to_search).pattern(r'[lemma=\"h[aeo].*\" & word=\"h[aeo].*\"]').extra_fields_doc(fields[\"document\"]).search().kwic()\n",
-    "\n",
-    "display_df( df_corpus1)\n",
-    "display_df( df_corpus2)\n",
-    "\n",
-    "display_df( df_corpus1.groupby([\"Region\", \"Date\"]), labels=\"h-dropping\", mode='chart')\n",
-    "display_df( df_corpus2.groupby([\"Region\", \"Date\"]), labels=\"normal\", mode='chart')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-03-04T11:56:40.202503Z",
-     "start_time": "2019-03-04T11:56:39.897412Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from chaininglib.ui.dfui import display_df\n",
-    "from chaininglib.process.corpus import get_tagger\n",
-    "from chaininglib.search.CorpusQuery import *\n",
-    "from chaininglib.search.LexiconQuery import *\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "base_lexicon=\"molex\"\n",
-    "\n",
-    "# we have a given word, let's say: \"loop\"\n",
-    "some_word = \"loop\"\n",
-    "\n",
-    "# get the paradigm of the lemma our word is a part of\n",
-    "l = create_lexicon(base_lexicon).lemma(some_word).search()\n",
-    "df_paradigm = l.kwic()\n",
-    "display_df(df_paradigm)\n",
-    "\n",
-    "# gather some pattern including our word, out of annotated corpora\n",
-    "# here: DET + ADJ + 'loop'\n",
-    "\n",
-    "dfs_all_corpora = []\n",
-    "\n",
-    "for one_corpus in get_available_corpora():\n",
-    "    print('querying '+one_corpus+'...')\n",
-    "    c = create_corpus(one_corpus).word(some_word).detailed_context(True).search()\n",
-    "    df_corpus = c.kwic() \n",
-    "    \n",
-    "    # store the results\n",
-    "    dfs_all_corpora.append(df_corpus)\n",
-    "\n",
-    "# get a tagger trained with our corpus data\n",
-    "tagger = get_tagger(dfs_all_corpora)\n",
-    "\n",
-    "# Use the trained tagger to tag unknown sentences\n",
-    "# The input must be like: tagger.tag(['today','is','a','beautiful','day'])\n",
-    "\n",
-    "sentence = 'Mijn buurman kijkt door de loop van zijn geweer'\n",
-    "tagged_sentence = tagger.tag( sentence.split() )\n",
-    "\n",
-    "print(tagged_sentence)\n",
-    "\n",
-    "\n",
-    "# Know we can lemmatize each occurence of our lemma in the new sentences"
+    "df_corpus2 = create_corpus(corpus_to_search).pattern(r'[lemma=\"h[aeo].*\" & word=\"h[aeo].*\"]').extra_fields_doc(fields[\"document\"]).search().kwic()\n",
+    " \n",
+    "#display_df( df_corpus1)\n",
+    "#display_df( df_corpus2)\n",
+    " \n",
+    "display_df( df_corpus1[['lemma 0', group_by_column]].groupby(group_by_column).count().sort_values(ascending=False,by=['lemma 0']).head(25), labels=\"h-dropping\", mode='chart')\n",
+    "display_df( df_corpus2[['lemma 0', group_by_column]].groupby(group_by_column).count().sort_values(ascending=False,by=['lemma 0']).head(25), labels=\"normal\", mode='chart')\n"
    ]
   },
   {
@@ -340,8 +339,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:14:00.448490Z",
-     "start_time": "2019-02-26T13:14:00.197799Z"
+     "end_time": "2019-03-06T11:46:43.045835Z",
+     "start_time": "2019-03-06T11:46:42.778387Z"
     },
     "scrolled": true
    },
@@ -365,8 +364,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:14:01.931797Z",
-     "start_time": "2019-02-26T13:14:01.382671Z"
+     "end_time": "2019-03-06T11:46:45.235269Z",
+     "start_time": "2019-03-06T11:46:44.744973Z"
     }
    },
    "outputs": [],
@@ -394,9 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Retrieve synonyms from DiaMaNT, look up in Gysseling <a class=\"anchor\" id=\"synonyms-diamant-gysseling\"></a>\n",
     "* Below cell searches for term \"boek\" in DiaMaNT, and looks up all variants in Gysseling"
@@ -409,8 +406,7 @@
     "ExecuteTime": {
      "end_time": "2019-02-26T13:41:57.928250Z",
      "start_time": "2019-02-26T13:41:51.125673Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -444,9 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "###  Build a frequency list of the lemma of some corpus output <a class=\"anchor\" id=\"freq-lemma-corpus\"></a>"
    ]
@@ -456,9 +450,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-26T13:03:10.724Z"
-    },
-    "hidden": true
+     "end_time": "2019-03-06T11:54:31.430269Z",
+     "start_time": "2019-03-06T11:47:35.084600Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -468,8 +462,8 @@
     "\n",
     "# do some corpus search\n",
     "\n",
-    "corpus_to_search=\"chn\"\n",
-    "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOUN\").search().kwic()\n",
+    "corpus_to_search=\"zeebrieven\"\n",
+    "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOU.*\").search().kwic()\n",
     "display_df(df_corpus)\n",
     "\n",
     "# compute and display a table of the frequencies of the lemmata\n",
@@ -484,8 +478,7 @@
     "ExecuteTime": {
      "end_time": "2019-01-16T15:46:20.519833Z",
      "start_time": "2019-01-16T15:46:20.516208Z"
-    },
-    "heading_collapsed": true
+    }
    },
    "source": [
     "### Find occurences of attributive adjectives not ending with -e, even though they are preceeded by a definite article <a class=\"anchor\" id=\"adjective-e\"></a>"
@@ -498,8 +491,7 @@
     "ExecuteTime": {
      "end_time": "2019-02-26T13:42:36.250370Z",
      "start_time": "2019-02-26T13:42:19.040009Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -508,6 +500,7 @@
     "from chaininglib.utils.dfops import df_filter\n",
     "from chaininglib.ui.dfui import display_df\n",
     "\n",
+    "# TODO: change corpora\n",
     "corpus_to_search=\"opensonar\"\n",
     "lexicon_to_search=\"molex\"\n",
     "\n",
@@ -535,9 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Look up inflected forms and spelling variants for a given lemma in a corpus <a class=\"anchor\" id=\"inflected-spelling-corpus\"></a>"
    ]
@@ -549,8 +540,7 @@
     "ExecuteTime": {
      "end_time": "2019-02-26T13:46:02.271245Z",
      "start_time": "2019-02-26T13:42:39.514812Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -558,6 +548,7 @@
     "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.LexiconQuery import *\n",
     "\n",
+    "# TODO: change corpora\n",
     "lexicon_to_search=\"molex\"\n",
     "corpus_to_search=\"chn\"\n",
     "\n",
@@ -587,9 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Corpus frequency list of lemmata from lexicon with given POS <a class=\"anchor\" id=\"corpus-frequency-lemma-pos\"></a>\n",
     "Build a function with which we can gather all lemmata of a lexicon with a given part-of-speech, and use that function to build a frequency list of those lemmata in a corpus"
@@ -602,8 +591,7 @@
     "ExecuteTime": {
      "end_time": "2019-02-26T13:47:30.286814Z",
      "start_time": "2019-02-26T13:46:04.391343Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -696,9 +684,10 @@
     "\n",
     "# For this case study, we need to run the previous case study first, because it generates a function we need here\n",
     "\n",
+    "# TODO: change corpora\n",
     "base_lexicon=\"molex\"\n",
-    "corpus_to_search1=\"opensonar\"\n",
-    "corpus_to_search2=\"chn\"\n",
+    "corpus_to_search1=\"zeebrieven\"\n",
+    "corpus_to_search2=\"gysseling\"\n",
     "\n",
     "# build frequency tables of two corpora\n",
     "\n",
@@ -846,6 +835,7 @@
     "\n",
     "# Run the function!\n",
     "\n",
+    "# TODO: change corpora\n",
     "base_lexicon=\"molex\"\n",
     "corpus_to_search=\"opensonar\"\n",
     "\n",
@@ -952,45 +942,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-28T16:27:29.178199Z",
      "start_time": "2019-02-28T16:27:24.437229Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search...\n",
-      "\u001b[Fget list of nouns which are part of an PP, as argument of predicate 'geven'...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['een Miele',\n",
-       " 'de Davondsfonds-leden',\n",
-       " 'de -bestuursleden',\n",
-       " 'de ontwikkeling van lokale Nederlandstalige educatieve software',\n",
-       " 'de verdediging',\n",
-       " 'de glastelers',\n",
-       " 'haar woede',\n",
-       " 'één stuk',\n",
-       " 'de computer',\n",
-       " 'de kampen die  komen te in Amsterdam Groningen Rotterdam en Tilburg staan',\n",
-       " 'het jaar',\n",
-       " 'ene kamp',\n",
-       " 'veranderingen in de school',\n",
-       " \"'t conservatorium als basis\"]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from chaininglib.search.TreebankQuery import *\n",
     "\n",
@@ -1015,20 +974,6 @@
     "df = tbq.kwic(align_lemma='geven')\n",
     "display(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1047,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
