Updated notebook for lexiconservice

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -70,8 +70,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T11:40:37.385545Z",
-     "start_time": "2019-03-06T11:40:37.116038Z"
+     "end_time": "2019-03-06T16:33:19.828905Z",
+     "start_time": "2019-03-06T16:33:19.555862Z"
     }
    },
    "outputs": [],
@@ -94,8 +94,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T11:40:41.046690Z",
-     "start_time": "2019-03-06T11:40:40.502187Z"
+     "end_time": "2019-03-06T16:33:20.302632Z",
+     "start_time": "2019-03-06T16:33:19.830380Z"
     },
     "scrolled": false
    },
@@ -127,8 +127,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T11:43:41.501438Z",
-     "start_time": "2019-03-06T11:43:40.889362Z"
+     "end_time": "2019-03-06T16:33:20.909030Z",
+     "start_time": "2019-03-06T16:33:20.304048Z"
     }
    },
    "outputs": [],
@@ -175,8 +175,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-04T11:56:40.202503Z",
-     "start_time": "2019-03-04T11:56:39.897412Z"
+     "end_time": "2019-03-06T16:33:21.728366Z",
+     "start_time": "2019-03-06T16:33:20.911111Z"
     }
    },
    "outputs": [],
@@ -240,8 +240,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T15:07:51.051672Z",
-     "start_time": "2019-02-26T15:07:50.079076Z"
+     "end_time": "2019-03-06T16:33:21.734400Z",
+     "start_time": "2019-03-06T16:33:19.568Z"
     }
    },
    "outputs": [],
@@ -287,8 +287,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T14:05:04.492326Z",
-     "start_time": "2019-03-06T14:04:52.313845Z"
+     "end_time": "2019-03-06T16:33:21.735977Z",
+     "start_time": "2019-03-06T16:33:19.573Z"
     }
    },
    "outputs": [],
@@ -317,6 +317,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Generate lexicon from several corpora <a class=\"anchor\" id=\"lexicon-several-corpora\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-06T16:33:21.745722Z",
+     "start_time": "2019-03-06T16:33:19.598Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from chaininglib.ui.dfui import display_df\n",
+    "from chaininglib.process.corpus import extract_lexicon\n",
+    "from chaininglib.search.CorpusQuery import *\n",
+    "\n",
+    "dfs_all_corpora = []\n",
+    "for one_corpus in get_available_corpora(exclude=[\"nederlab\"]):\n",
+    "    print('querying '+one_corpus+'...')\n",
+    "    c = create_corpus(one_corpus).lemma(\"woordenboek\").detailed_context(True).search()\n",
+    "    df_corpus = c.kwic() \n",
+    "    # store the results\n",
+    "    dfs_all_corpora.append(df_corpus)\n",
+    "\n",
+    "# extract lexicon and show the result\n",
+    "extracted_lexicon = extract_lexicon(dfs_all_corpora, posColumnName=\"pos\") # For FCS: posColumnName=universal_dependency\n",
+    "display(extracted_lexicon)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lexicon"
    ]
   },
@@ -339,8 +374,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T11:46:43.045835Z",
-     "start_time": "2019-03-06T11:46:42.778387Z"
+     "end_time": "2019-03-06T16:33:21.737060Z",
+     "start_time": "2019-03-06T16:33:19.576Z"
     },
     "scrolled": true
    },
@@ -364,8 +399,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T11:46:45.235269Z",
-     "start_time": "2019-03-06T11:46:44.744973Z"
+     "end_time": "2019-03-06T16:33:21.737959Z",
+     "start_time": "2019-03-06T16:33:19.578Z"
     }
    },
    "outputs": [],
@@ -404,8 +439,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:41:57.928250Z",
-     "start_time": "2019-02-26T13:41:51.125673Z"
+     "end_time": "2019-03-06T16:33:21.739111Z",
+     "start_time": "2019-03-06T16:33:19.580Z"
     }
    },
    "outputs": [],
@@ -450,8 +485,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T11:54:31.430269Z",
-     "start_time": "2019-03-06T11:47:35.084600Z"
+     "end_time": "2019-03-06T16:33:21.740311Z",
+     "start_time": "2019-03-06T16:33:19.583Z"
     }
    },
    "outputs": [],
@@ -489,8 +524,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:42:36.250370Z",
-     "start_time": "2019-02-26T13:42:19.040009Z"
+     "end_time": "2019-03-06T16:33:21.741214Z",
+     "start_time": "2019-03-06T16:33:19.585Z"
     }
    },
    "outputs": [],
@@ -500,8 +535,8 @@
     "from chaininglib.utils.dfops import df_filter\n",
     "from chaininglib.ui.dfui import display_df\n",
     "\n",
-    "# TODO: change corpora\n",
-    "corpus_to_search=\"opensonar\"\n",
+    "# TODO: zeebrieven and molex are not from same time period. But lexiconservice does not support regex\n",
+    "corpus_to_search=\"zeebrieven\"\n",
     "lexicon_to_search=\"molex\"\n",
     "\n",
     "# CORPUS: get [article + attributive adjective + nouns] combinations in which the adjective does not end with -e\n",
@@ -538,8 +573,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:46:02.271245Z",
-     "start_time": "2019-02-26T13:42:39.514812Z"
+     "end_time": "2019-03-06T16:33:21.742176Z",
+     "start_time": "2019-03-06T16:33:19.586Z"
     }
    },
    "outputs": [],
@@ -548,9 +583,9 @@
     "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.LexiconQuery import *\n",
     "\n",
-    "# TODO: change corpora\n",
-    "lexicon_to_search=\"molex\"\n",
-    "corpus_to_search=\"chn\"\n",
+    "# Corpus Gysseling and lexicon mnwlex are from same period: 1250-1550\n",
+    "lexicon_to_search=\"mnwlex\"\n",
+    "corpus_to_search=\"gysseling\"\n",
     "\n",
     "##############################################\n",
     "# TODO  zelfde met meerdere lemmata en gegroepeerd \n",
@@ -580,8 +615,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Corpus frequency list of lemmata from lexicon with given POS <a class=\"anchor\" id=\"corpus-frequency-lemma-pos\"></a>\n",
-    "Build a function with which we can gather all lemmata of a lexicon with a given part-of-speech, and use that function to build a frequency list of those lemmata in a corpus"
+    "### Corpus frequency list of lemmata from lexicon with given lemma <a class=\"anchor\" id=\"corpus-frequency-lemma-pos\"></a>\n",
+    "Build a function with which we can gather all lemmata of a lexicon with a given lemma, and use that function to build a frequency list of those lemmata in a corpus"
    ]
   },
   {
@@ -589,8 +624,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:47:30.286814Z",
-     "start_time": "2019-02-26T13:46:04.391343Z"
+     "end_time": "2019-03-06T17:02:10.420299Z",
+     "start_time": "2019-03-06T17:02:09.804448Z"
     }
    },
    "outputs": [],
@@ -604,59 +639,61 @@
     "\n",
     "# build a function as required. We will run it afterwards\n",
     "\n",
-    "def get_frequency_list_given_a_corpus(lexicon, pos, corpus):\n",
+    "def get_frequency_list_given_a_corpus(lexicon, lemma, corpus):\n",
     "    \n",
     "    # LEXICON: get a lemmata list to work with\n",
     "\n",
     "    # query the lexicon\n",
-    "    lq = create_lexicon(lexicon).pos(pos).search()\n",
+    "    lq = create_lexicon(lexicon).lemma(lemma).search()\n",
     "    df_lexicon = lq.kwic()\n",
     "\n",
     "    # Put the results into an array, so we can loop through the found lemmata\n",
-    "    lexicon_lemmata_arr = [w.lower() for w in df_lexicon[\"writtenForm\"]]\n",
-    "\n",
-    "    # Instantiate a DataFrame, in which we will gather all single lemmata occurences\n",
+    "    lexicon_wordforms_arr = [w.lower() for w in df_lexicon[\"wordform\"]]\n",
+    "    print(lexicon_wordforms_arr)\n",
+    "    # Instantiate a DataFrame, in which we will gather all single wordform occurences\n",
     "    df_full_list = pd.DataFrame()\n",
     "\n",
     "\n",
-    "    # CORPUS: loop through the lemmata list, query the corpus with each lemma, and count the results\n",
+    "    # CORPUS: loop through the wordforms list, query the corpus with each wordform, and count the results\n",
     "\n",
-    "    # It's a good idea to query more than one lemma at at the time,\n",
+    "    # It's a good idea to query more than one wordform at at the time,\n",
     "    # but not too many, otherwise the server will get overloaded!\n",
-    "    nr_of_lemmata_to_query_atonce = 100\n",
+    "    nr_of_wordforms_to_query_atonce = 100\n",
     "\n",
-    "    # loop over lemmata list \n",
-    "    for i in range(0, len(lexicon_lemmata_arr), nr_of_lemmata_to_query_atonce):\n",
+    "    # loop over wordforms list \n",
+    "    for i in range(0, len(lexicon_wordforms_arr), nr_of_wordforms_to_query_atonce):\n",
     "        \n",
     "        # slice to small array of lemmata to query at once\n",
-    "        small_lemmata_arr = lexicon_lemmata_arr[i : i+nr_of_lemmata_to_query_atonce] \n",
+    "        small_wordforms_arr = lexicon_wordforms_arr[i : i+nr_of_wordforms_to_query_atonce] \n",
     "\n",
-    "        # join set of lemmata to send them in a query all at once\n",
+    "        # join set of wordforms to send them in a query all at once\n",
     "        # beware: single quotes need escaping\n",
-    "        lemmata_list = \"|\".join(small_lemmata_arr).replace(\"'\", \"\\\\\\\\'\")\n",
-    "        cq = create_corpus(corpus).pattern(r'[lemma=\"' + lemmata_list + r'\"]').search()\n",
+    "        wordforms_list = \"|\".join(small_wordforms_arr).replace(\"'\", \"\\\\\\\\'\")\n",
+    "        cq = create_corpus(corpus).pattern(r'[word=\"' + wordforms_list + r'\"]').search()\n",
     "        df_corpus = cq.kwic()\n",
     "\n",
     "        # add the results to the full list\n",
-    "        df_full_list = pd.concat( [df_full_list, df_corpus[\"lemma 0\"]] )     \n",
+    "        print(df_corpus)\n",
+    "        df_full_list = pd.concat( [df_full_list, df_corpus[\"word 0\"]] )     \n",
     "        \n",
     "\n",
-    "    # make sure the columnswith contains the lemmata is called 'lemma', as it is required by the get_frequency_list function\n",
-    "    df_full_list.columns = ['lemma']\n",
+    "    # make sure the columnswith contains the wordforms is same as given to get_frequency_list function\n",
+    "    column_name=\"word\"\n",
+    "    df_full_list.columns = [column_name]\n",
     "\n",
     "    # we're done with querying, build the frequency list now\n",
-    "    freq_df = get_frequency_list(df_full_list)\n",
+    "    freq_df = get_frequency_list(df_full_list, column_name=column_name)\n",
     "\n",
     "    return freq_df\n",
     "\n",
     "    \n",
     "# run it!\n",
+    "# Corpus Gysseling and lexicon mnwlex are from same period: 1250-1550\n",
+    "lexicon=\"mnwlex\"\n",
+    "corpus_to_search=\"gysseling\"\n",
+    "lemma=\"vader\"\n",
     "\n",
-    "lexicon=\"molex\"\n",
-    "corpus_to_search=\"chn\"\n",
-    "pos=\"CONJ\"\n",
-    "\n",
-    "freq_df = get_frequency_list_given_a_corpus(lexicon, pos, corpus_to_search)\n",
+    "freq_df = get_frequency_list_given_a_corpus(lexicon, lemma, corpus_to_search)\n",
     "\n",
     "display_df(freq_df)"
    ]
@@ -665,7 +702,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build a frequency table of some corpus, based on lemma list of a given lexicon <a class=\"anchor\" id=\"freqtable-lemmalist\"></a>"
+    "### Build a frequency table of some corpus, based on word forms list of a given lexicon <a class=\"anchor\" id=\"freqtable-lemmalist\"></a>\n",
+    "For this case study, you need to run the previous case study first, because it generates a function we need here."
    ]
   },
   {
@@ -673,8 +711,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-26T13:47:56.038959Z",
-     "start_time": "2019-02-26T13:47:34.501907Z"
+     "end_time": "2019-03-06T17:07:09.638407Z",
+     "start_time": "2019-03-06T17:07:01.867635Z"
     }
    },
    "outputs": [],
@@ -682,16 +720,20 @@
     "from chaininglib.utils.dfops import get_rank_diff\n",
     "from chaininglib.ui.dfui import display_df\n",
     "\n",
-    "# For this case study, we need to run the previous case study first, because it generates a function we need here\n",
+    "# For this case study, you need to run the previous case study first, because it generates a function we need here\n",
     "\n",
-    "# TODO: change corpora\n",
-    "base_lexicon=\"molex\"\n",
+    "# Use lexica and corpora from same period\n",
+    "base_lexicon1=\"mnwlex\"\n",
+    "corpus_to_search1=\"gysseling\"\n",
+    "\n",
+    "base_lexicon2=\"lexicon_service_db\"\n",
     "corpus_to_search1=\"zeebrieven\"\n",
-    "corpus_to_search2=\"gysseling\"\n",
+    "\n",
+    "lemma=\"het\"\n",
     "\n",
     "# build frequency tables of two corpora\n",
     "\n",
-    "df_frequency_list1 = get_frequency_list_given_a_corpus(base_lexicon, \"NOUN\", corpus_to_search1)\n",
+    "df_frequency_list1 = get_frequency_list_given_a_corpus(base_lexicon1, lemma, corpus_to_search1)\n",
     "# sort and display\n",
     "df_top25_descending = df_frequency_list1.sort_values(ascending=False,by=['token count']).head(25)\n",
     "df_top25_ascending =  df_frequency_list1.sort_values(ascending=True, by=['rank']).head(25)\n",
@@ -699,7 +741,7 @@
     "print(type(df_top25_descending['token count']))\n",
     "display_df( df_top25_descending['token count'], labels='chart df1', mode='chart' )\n",
     "\n",
-    "df_frequency_list2 = get_frequency_list_given_a_corpus(base_lexicon, \"NOUN\", corpus_to_search2)\n",
+    "df_frequency_list2 = get_frequency_list_given_a_corpus(base_lexicon2, lemma, corpus_to_search2)\n",
     "# sort and display\n",
     "df_top25_descending = df_frequency_list2.sort_values(ascending=False,by=['token count']).head(25)\n",
     "df_top25_ascending =  df_frequency_list2.sort_values(ascending=True, by=['rank']).head(25)\n",
@@ -735,8 +777,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-04T11:53:06.779506Z",
-     "start_time": "2019-03-04T11:53:01.971282Z"
+     "end_time": "2019-03-06T17:09:38.260298Z",
+     "start_time": "2019-03-06T17:09:38.236906Z"
     }
    },
    "outputs": [],
@@ -750,18 +792,18 @@
     "# It will return a Pandas DataFrame associating lemmata to their paradigms ('known_wordforms' column) and\n",
     "# missing wordforms found in the corpus ('unknown_wordforms' column).\n",
     "\n",
-    "def get_missing_wordforms(lexicon, pos, corpus):    \n",
+    "def get_missing_wordforms(lexicon, lemma, corpus):    \n",
     "    \n",
     "    print('Finding missing wordforms in a lexicon can take a long time...');\n",
     "    \n",
     "    # LEXICON: \n",
     "    # get a lemmata list having a given part-of-speech\n",
     "    \n",
-    "    lq = create_lexicon(lexicon).pos(pos).search()\n",
+    "    lq = create_lexicon(lexicon).lemma(lemma).search()\n",
     "    df_lexicon = lq.kwic()\n",
     "    \n",
     "    # Put the results into an array, so we can loop through the list of lemmata\n",
-    "    lexicon_lemmata_arr = [w.lower() for w in df_lexicon[\"writtenForm\"]]\n",
+    "    lexicon_lemmata_arr = [w.lower() for w in df_lexicon[\"wordform\"]]\n",
     "    \n",
     "    # Prepare the output:\n",
     "    # instantiate a DataFrame for storing lemmata and mssing wordforms\n",
@@ -836,52 +878,18 @@
     "# Run the function!\n",
     "\n",
     "# TODO: change corpora\n",
-    "base_lexicon=\"molex\"\n",
-    "corpus_to_search=\"opensonar\"\n",
+    "base_lexicon=\"lexicon_service_db\"\n",
+    "corpus_to_search=\"gysseling\"\n",
     "\n",
-    "df = get_missing_wordforms(base_lexicon, \"VERB\", corpus_to_search)\n",
+    "lemma=\"boek\"\n",
+    "\n",
+    "df = get_missing_wordforms(base_lexicon, lemma, corpus_to_search)\n",
     "\n",
     "# After such a heavy process, it's a good idea to save the results\n",
     "\n",
     "df.to_csv( \"missing_wordforms.csv\", index=False)\n",
     "\n",
     "display_df(df)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Generate lexicon from several corpora <a class=\"anchor\" id=\"lexicon-several-corpora\"></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-26T16:15:49.892955Z",
-     "start_time": "2019-02-26T16:15:40.785489Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from chaininglib.ui.dfui import display_df\n",
-    "from chaininglib.process.corpus import extract_lexicon\n",
-    "from chaininglib.search.CorpusQuery import *\n",
-    "from chaininglib.search.LexiconQuery import *\n",
-    "\n",
-    "dfs_all_corpora = []\n",
-    "for one_corpus in get_available_corpora(exclude=[\"nederlab\"]):\n",
-    "    print('querying '+one_corpus+'...')\n",
-    "    c = create_corpus(one_corpus).lemma(\"woordenboek\").detailed_context(True).search()\n",
-    "    df_corpus = c.kwic() \n",
-    "    # store the results\n",
-    "    dfs_all_corpora.append(df_corpus)\n",
-    "\n",
-    "# extract lexicon and show the result\n",
-    "extracted_lexicon = extract_lexicon(dfs_all_corpora, posColumnName=\"pos\") # For FCS: posColumnName=universal_dependency\n",
-    "display(extracted_lexicon)"
    ]
   },
   {
@@ -903,8 +911,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T16:20:15.844270Z",
-     "start_time": "2019-02-28T16:18:04.518545Z"
+     "end_time": "2019-03-06T16:33:21.746920Z",
+     "start_time": "2019-03-06T16:33:19.600Z"
     }
    },
    "outputs": [],
@@ -945,8 +953,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T16:27:29.178199Z",
-     "start_time": "2019-02-28T16:27:24.437229Z"
+     "end_time": "2019-03-06T16:33:21.748403Z",
+     "start_time": "2019-03-06T16:33:19.603Z"
     }
    },
    "outputs": [],
